[package]
name = "currency-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.2"
clearscreen = "2.0.1"
ctrlc = "3.4.0"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.164"
serde_derive = "1.0.164"
tokio = { version = "1.28.2", features = ["full"] }
